# GanitaZero

./: README.md
config/: CMakeLists.txt  test.mat
config/schemas/: gz-schema.adic  gz-schema.adic.repeat  gz-schema.transformation
docs/: DMBD_1.tex
sample/: Chacon2.gztran  Chacon3.gztran  chacon2.sample  chacon3.sample
scripts/: E6999_project_TFActivation.ipynb  gen_rand.sh
src/cpp/: GanitaBuffer.cpp  GanitaZero.cpp  GanitaZero.hpp  GanitaZeroBlock.cpp  GanitaZeroHist.cpp  GanitaZeroMat.cpp  GanitaZeroRepresentations.cpp  GanitaZeroRepresentations.hpp  GanitaZeroSchema.cpp  GanitaZeroTile.cpp  GanitaZeroUtil.cpp  GanitaZeroVersion.cpp  ganitazero_version.h
src/cpp/representations/: GanitaZeroAdic.cpp  GanitaZeroAdic.hpp  GanitaZeroBinary.cpp  GanitaZeroFair.cpp  GanitaZeroGossip.cpp  GanitaZeroHMM.cpp  GanitaZeroMap.cpp  GanitaZeroNeural.cpp  GanitaZeroPascalNS.cpp  GanitaZeroSub.cpp  GanitaZeroSymbolic.cpp  GanitaZeroTGF.cpp  GanitaZeroTower.cpp
src/drivers/: gPredict.cc  gZeroRep.cc  gzPNS.cc  gzeigen.cc  gzero.cc  gzfair.cc  gzgossip.cc  gztgf.cc  zerog.cc
src/include/ganita/zero/: GanitaBuffer.hpp  GanitaZero.hpp  GanitaZeroBlock.hpp  GanitaZeroHist.hpp  GanitaZeroMat.hpp  GanitaZeroRepresentations.hpp  GanitaZeroRepresentations.hpp~  GanitaZeroSchema.hpp  GanitaZeroTile.hpp  GanitaZeroUtil.hpp  GanitaZeroVersion.hpp
src/include/ganita/zero/representations/: GanitaZeroAdic.hpp  GanitaZeroBinary.hpp  GanitaZeroFair.hpp  GanitaZeroGossip.hpp  GanitaZeroHMM.hpp  GanitaZeroMap.hpp  GanitaZeroNeural.hpp  GanitaZeroPascalNS.hpp  GanitaZeroSub.hpp  GanitaZeroSubLibrary.hpp  GanitaZeroSymbolic.hpp  GanitaZeroTGF.hpp  GanitaZeroTower.hpp
